--- a/dingo/AndroidManifest.xml
+++ b/dingo/AndroidManifest.xml
@@ -5,9 +5,10 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="7" />
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:label="@string/app_name" android:icon="@drawable/dingo">
         <activity android:name=".Dingo"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:icon="@drawable/dingobar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
