--- a/trunk/dingo/AndroidManifest.xml
+++ b/trunk/dingo/AndroidManifest.xml
@@ -7,8 +7,7 @@
 
     <application android:label="@string/app_name" android:icon="@drawable/dingo">
         <activity android:name=".Dingo"
-                  android:label="@string/app_name"
-                  android:icon="@drawable/dingobar">
+                  android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
