--- a/trunk/dingo/AndroidManifest.xml
+++ b/trunk/dingo/AndroidManifest.xml
@@ -3,7 +3,8 @@
       package="br.com.wacoo"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="7" />
+    <uses-sdk android:minSdkVersion="7" 
+    	android:targetSdkVersion="11" />
 
     <application android:label="@string/app_name" android:icon="@drawable/dingo">
         <activity android:name=".Dingo"
